--- a/app/src/main/res/layout/row_lesson_item.xml
+++ b/app/src/main/res/layout/row_lesson_item.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/lesson_item_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        tools:text="1234" />
+
+    <TextView
         android:id="@+id/lesson_item_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
