Creating development flavor to mock data

--- a/app/src/main/res/layout/activity_area_list.xml
+++ b/app/src/main/res/layout/activity_area_list.xml
@@ -13,8 +13,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="@string/areas_title"
-            app:titleTextColor="@android:color/white" />
+            app:title="@string/areas_title"/>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
