--- a/app/src/main/res/layout/include_popup.xml
+++ b/app/src/main/res/layout/include_popup.xml
@@ -2,12 +2,13 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/popUp"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:background="@android:color/holo_blue_dark">
 
     <TextView
-        android:id="@+id/popupMessage"
+        android:id="@+id/popUpMessage"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="center"
@@ -18,12 +19,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/popupAction"
+        app:layout_constraintRight_toLeftOf="@+id/popUpAction"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Falha na rede" />
 
     <Button
-        android:id="@+id/popupAction"
+        android:id="@+id/popUpAction"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -32,7 +33,7 @@
         android:padding="8dp"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/popupMessage"
+        app:layout_constraintLeft_toRightOf="@+id/popUpMessage"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Button" />
