--- a/app/src/development/res/values/colors.xml
+++ b/app/src/development/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#FF4081</color>
     <color name="colorPrimaryDark">#FF0081</color>
     <color name="colorAccent">#3F51B5</color>
+
+    <color name="grey">#929292</color>
 </resources>
