--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="extra_large_text_size">22sp</dimen>
     <dimen name="large_text_size">18sp</dimen>
     <dimen name="regular_text_size">16sp</dimen>
 </resources>
