--- a/app/src/main/res/layout/row_lesson_item.xml
+++ b/app/src/main/res/layout/row_lesson_item.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        tools:text="1234" />
+        tools:text="1234"
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/lesson_item_id"
@@ -20,7 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        tools:text="1234" />
+        tools:text="1234"
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/lesson_item_title"
@@ -28,7 +30,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        tools:text="Area 1" />
+        tools:text="Area 1"
+        android:layout_marginStart="8dp" />
 
     <View
         android:layout_width="match_parent"
