--- a/app/src/main/res/layout/row_area_item.xml
+++ b/app/src/main/res/layout/row_area_item.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textSize="@dimen/large_text_size"
+            android:textSize="@dimen/extra_large_text_size"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/title"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -37,7 +37,7 @@
             android:maxLines="2"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:textSize="@dimen/regular_text_size"
+            android:textSize="@dimen/large_text_size"
             app:layout_constraintBottom_toTopOf="@+id/separator"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -60,11 +60,13 @@
         <TextView
             android:id="@+id/action"
             android:layout_width="wrap_content"
-            android:layout_height="38dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="@string/area_list_action"
             android:textAllCaps="true"
-            android:textSize="@dimen/regular_text_size"
+            android:textSize="@dimen/large_text_size"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
