--- a/app/src/main/res/layout/row_items_error.xml
+++ b/app/src/main/res/layout/row_items_error.xml
@@ -9,12 +9,12 @@
         android:id="@+id/image"
         android:layout_width="104dp"
         android:layout_height="104dp"
-        android:layout_gravity="center"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/message"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.3"
         app:layout_constraintVertical_chainStyle="packed"
         app:srcCompat="@drawable/ic_error_grey_vector"
         tools:ignore="ContentDescription" />
@@ -23,7 +23,6 @@
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:text="@string/list_error"
         android:textSize="@dimen/extra_large_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
