--- a/app/src/main/res/layout/row_lesson_item.xml
+++ b/app/src/main/res/layout/row_lesson_item.xml
@@ -7,36 +7,19 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/lesson_item_count"
-        android:layout_width="wrap_content"
+        android:id="@+id/title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        tools:text="1234"
-        android:layout_marginStart="8dp" />
-
-    <TextView
-        android:id="@+id/lesson_item_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        tools:text="1234"
-        android:layout_marginStart="8dp" />
-
-    <TextView
-        android:id="@+id/lesson_item_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        tools:text="Area 1"
-        android:layout_marginStart="8dp" />
+        android:lines="3"
+        android:textSize="@dimen/large_text_size"
+        android:gravity="center"
+        android:padding="16dp"
+        tools:text="Aspectos biológicos do desenvolvimento sustentável" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginBottom="8dp"
-        android:background="@android:color/black" />
+        android:background="@color/grey" />
 
 </LinearLayout>
