- Adding last update data  - Refactoring adapters

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="grey">#929292</color>
+    <color name="light_grey">#C7C7C7</color>
 </resources>
