--- a/app/src/main/res/layout/row_area_item.xml
+++ b/app/src/main/res/layout/row_area_item.xml
@@ -60,7 +60,7 @@
         <TextView
             android:id="@+id/action"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
